Updated post, update and deleteRoutineData APIs
- added routineID to routine payload
- changed query of deleteRoutineData from group to routineID
- removed date-time type form start and endtime in routine payload

--- a/api.yaml
+++ b/api.yaml
@@ -53,7 +53,7 @@ info:
       9. Overall Optimization      
     ---
 
-  version: "1.0.7"
+  version: "1.0.8"
   title: "Herald College Kathmandu App"
   contact:
     name: "Backend Team"
@@ -204,7 +204,46 @@ paths:
           name: "body"
           required: true
           schema:
-            $ref: "#/definitions/Routine"
+            properties:
+              courseType:
+                type: "string"
+                enum:
+                  - "BIT"
+                  - "BIBM"
+                  - "MBA"
+              moduleName:
+                type: "string"
+              teacherName:
+                type: "string"
+              classType:
+                type: "string"
+                enum:
+                  - "LECTURE"
+                  - "TUTORIAL"
+                  - "WORKSHOP"
+              group:
+                type: "string"
+              roomName:
+                type: "string"
+              blockName:
+                type: "string"
+                enum:
+                  - "HCK"
+                  - "WLV"
+              day:
+                type: "string"
+              startTime:
+                type: "string"
+              endTime:
+                type: "string"
+              status:
+                type: "string"
+                enum:
+                  - "Running"
+                  - "Upcoming"
+                  - "Cancelled"
+                  - "Postponed"
+                  - "Completed"
       responses:
         "200":
           description: "OK"
@@ -317,8 +356,8 @@ paths:
       produces:
         - "application/json"
       parameters:
-        - name: "group"
-          description: "The name of group"
+        - name: "routineID"
+          description: "ID of routine"
           in: "query"
           required: true
           type: "string"
@@ -884,6 +923,8 @@ definitions:
   Routine:
     type: "object"
     properties:
+      routineID:
+        type: "string"
       courseType:
         type: "string"
         enum:
@@ -913,10 +954,8 @@ definitions:
         type: "string"
       startTime:
         type: "string"
-        format: "date-time"
       endTime:
         type: "string"
-        format: "date-time"
       status:
         type: "string"
         enum:
@@ -955,7 +994,6 @@ definitions:
         type: "string"
       lostDate:
         type: "string"
-        format: "date-time"
       isVictimRecievedData:
         type: "string"
   Notification:
