Added feedbackId query to /deleteFeedback

--- a/api.yaml
+++ b/api.yaml
@@ -4,6 +4,7 @@ info:
     <img src="https://dev-herald-server.herokuapp.com/images/logo.png" alt="Herald College Kathmandu logo" width="400" height="100" />
 
     # API Documentation
+    Updated on 28th September, 2022
 
     API Documentation of Herald College Application developed by **Herald Development Platform Community**.
     <img src="https://dev-herald-server.herokuapp.com/images/community.jpeg" alt="Development Platform Community logo" width="400" height="100" />
@@ -37,7 +38,6 @@ info:
       1. Aggregation Framework for data mapping
       2. Devops + AWS Service integration [Premium]
       3. Log tracing & Management [Premium]
-      4. Add routine ID based search on params wat [Current!]
     ---
 
     ### ✅ Things Accomplished Until now
@@ -53,7 +53,7 @@ info:
       9. Overall Optimization      
     ---
 
-  version: "1.0.8"
+  version: "1.0.9"
   title: "Herald College Kathmandu App"
   contact:
     name: "Backend Team"
@@ -753,17 +753,10 @@ paths:
       produces:
         - "application/json"
       parameters:
-        - in: "body"
-          name: "body"
+        - in: "query"
+          name: "feedbackId"
+          type: "string"
           required: true
-          schema:
-            properties:
-              feedbackid:
-                type: "string"
-                example: "as23vd34dvfv"
-              filename:
-                type: "string"
-                example: "abc.png"
       responses:
         "201":
           description: "CREATED"
