--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pusher": "^5.1.0-beta",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0",
+    "xlsx": "^0.18.5",
     "xlsx2json": "^1.0.0",
     "yamljs": "^0.3.0"
   }
