--- a/api.yaml
+++ b/api.yaml
@@ -4,7 +4,7 @@ info:
     <img src="https://dev-herald-server.herokuapp.com/images/logo.png" alt="Herald College Kathmandu logo" width="400" height="100" />
 
     # API Documentation
-    Updated on 10th November, 2022
+    Updated on 21st November, 2022
 
     API Documentation of Herald College Application developed by **Herald Development Platform Community**.
     <img src="https://dev-herald-server.herokuapp.com/images/community.jpeg" alt="Development Platform Community logo" width="400" height="100" />
@@ -38,7 +38,7 @@ info:
       9. Overall Optimization [max time]  
     ---
 
-  version: "1.0.10"
+  version: "1.0.11"
   title: "Herald College Kathmandu App"
   contact:
     name: "Backend Team"
@@ -57,6 +57,8 @@ tags:
     description: "Operations related to Student user"
   - name: "Common"
     description: "Operations common to all users"
+  - name: "Constant"
+    description: "Operations constant to users"
   - name: "Upload"
     description: "Operations related to upload college data"
   - name: "Feedback"
@@ -264,7 +266,7 @@ paths:
         - Bearer: []
       tags:
         - "Routine"
-      summary: "Gets routine data"
+      summary: "Gets Routine Data"
       description: ""
       consumes:
         - "application/json"
@@ -301,7 +303,7 @@ paths:
         - Bearer: []
       tags:
         - "Routine"
-      summary: "Gets ongoing routine data"
+      summary: "Gets Ongoing Routine Data"
       description: ""
       consumes:
         - "application/json"
@@ -652,7 +654,7 @@ paths:
         - Bearer: []
       tags:
         - "Feedback"
-      summary: "Regenerate Token"
+      summary: "Post Feedback"
       description: ""
       consumes:
         - "application/json"
@@ -897,6 +899,45 @@ paths:
               message:
                 type: "string"
                 example: "500. SERVER ERROR!!"
+  /api/v4/uploadSchedule:
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - "Upload"
+      summary: "Upload Schedule Excel Sheet"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+         - in: formData
+           name: ExcelSheet
+           type: file
+           description: The file to upload.
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Data extracted and import to DB successfully."
+        "406":
+          description: "NOT_ACCEPTABLE"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Failed to parse the given file. Please upload the xlsx formate file only !!"
+        "500":
+          description: "INTERNAL_SERVER_ERROR"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Failed to parse the given file. Please upload the xlsx formate file only !!!"
   /api/v4/uploadStudentList:
     post:
       security:
@@ -904,6 +945,84 @@ paths:
       tags:
         - "Upload"
       summary: "Upload Student Excel Sheet"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+         - in: formData
+           name: ExcelSheet
+           type: file
+           description: The file to upload.
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Data extracted and import to DB successfully."
+        "406":
+          description: "NOT_ACCEPTABLE"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Failed to parse the given file. Please upload the xlsx formate file only !!"
+        "500":
+          description: "INTERNAL_SERVER_ERROR"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Failed to parse the given file. Please upload the xlsx formate file only !!!"
+  /api/v4/uploadTeacherList:
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - "Upload"
+      summary: "Upload Teacher Excel Sheet"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+         - in: formData
+           name: ExcelSheet
+           type: file
+           description: The file to upload.
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Data extracted and import to DB successfully."
+        "406":
+          description: "NOT_ACCEPTABLE"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Failed to parse the given file. Please upload the xlsx formate file only !!"
+        "500":
+          description: "INTERNAL_SERVER_ERROR"
+          schema:
+            properties:
+              message:
+                type: "string"
+                example: "Failed to parse the given file. Please upload the xlsx formate file only !!!"
+  /api/v4/uploadAdminList:
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - "Upload"
+      summary: "Upload Admin Excel Sheet"
       description: ""
       consumes:
         - "application/json"
@@ -958,7 +1077,114 @@ paths:
           description: "OK"
         "500":
           description: "INTERNAL_SERVER_ERROR"
-          
+  /api/v4/getStatus:
+    get:
+      security:
+        - Bearer: []
+      tags:
+        - "Constant"
+      summary: "Get Status"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            properties:
+                sucess:
+                  type: "string"
+                statusList:
+                  type: "string"                
+        "404":
+          description: "NOT_FOUND"
+          schema:
+            properties:
+              message:
+                type: "string"
+  /api/v4/getRooms:
+    get:
+      security:
+        - Bearer: []
+      tags:
+        - "Constant"
+      summary: "Get Rooms"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            properties:
+                sucess:
+                  type: "string"
+                Rooms:
+                  type: "string"  
+        "404":
+          description: "NOT_FOUND"
+          schema:
+            properties:
+              message:
+                type: "string"      
+  /api/v4/getClassType:
+    get:
+      security:
+        - Bearer: []
+      tags:
+        - "Constant"
+      summary: "Get Class Type"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            properties:
+                sucess:
+                  type: "string"
+                classTypes:
+                  type: "string"  
+        "404":
+          description: "NOT_FOUND"
+          schema:
+            properties:
+              message:
+                type: "string"        
+  /api/v4/getCourseType:
+    get:
+      security:
+        - Bearer: []
+      tags:
+        - "Constant"
+      summary: "Get Course Type"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            properties:
+                sucess:
+                  type: "string"
+                courseTypes:
+                  type: "string"  
+        "404":
+          description: "NOT_FOUND"
+          schema:
+            properties:
+              message:
+                type: "string"
 definitions:
   Routine:
     type: "object"
