--- a/api.yaml
+++ b/api.yaml
@@ -4,7 +4,7 @@ info:
     <img src="https://dev-herald-server.herokuapp.com/images/logo.png" alt="Herald College Kathmandu logo" width="400" height="100" />
 
     # API Documentation
-    Updated on 28th November, 2022
+    Updated on 30th November, 2022
 
     API Documentation of Herald College Application developed by **Herald Development Platform Community**.
     <img src="https://dev-herald-server.herokuapp.com/images/community.jpeg" alt="Development Platform Community logo" width="400" height="100" />
@@ -40,7 +40,7 @@ info:
       9. Overall Optimization [max time]  
     ---
 
-  version: "1.1.2"
+  version: "1.1.3"
   title: "Herald College Kathmandu App"
   contact:
     name: "Backend Team"
@@ -210,7 +210,7 @@ paths:
                   - "LECTURE"
                   - "TUTORIAL"
                   - "WORKSHOP"
-              group:
+              groups:
                 type: "string"
               roomName:
                 type: "string"
@@ -275,8 +275,8 @@ paths:
       produces:
         - "application/json"
       parameters:
-        - name: "group"
-          description: "The name of group"
+        - name: "groups"
+          description: "The name of groups"
           in: "query"
           required: false
           type: "string"
@@ -291,14 +291,14 @@ paths:
             properties:
               message:
                 type: "string"
-                example: "No result found for this group!"
+                example: "No result found for this groups!"
         "400":
           description: "BAD_REQUEST"
           schema:
             properties:
               message:
                 type: "string"
-                example: "invalid group name!"
+                example: "invalid groups name!"
   /api/v4/routines/ongoing:
    get:
       security:
@@ -312,8 +312,8 @@ paths:
       produces:
         - "application/json"
       parameters:
-        - name: "group"
-          description: "The name of group"
+        - name: "groups"
+          description: "The name of groups"
           in: "query"
           required: false
           type: "string"
@@ -328,14 +328,14 @@ paths:
             properties:
               message:
                 type: "string"
-                example: "No result found for this group!"
+                example: "No result found for this groups!"
         "400":
           description: "BAD_REQUEST"
           schema:
             properties:
               message:
                 type: "string"
-                example: "invalid group name!"
+                example: "invalid groups name!"
   /api/v4/admin/updateRoutineData:
     put:
       security:
@@ -1252,7 +1252,7 @@ definitions:
           - "LECTURE"
           - "TUTORIAL"
           - "WORKSHOP"
-      group:
+      groups:
         type: "string"
       roomName:
         type: "string"
